# RL_agents_for_retrosynthesis

./: .gitattributes  .gitignore  ARCHITECTURE_AND_ROADMAP.md  LICENSE  MANIFEST.in  README.md  TridentSynthRL_Manuscript.docx  TridentSynthRL_Manuscript_Outline.docx  pyproject.toml  requirements.txt  run_mcts.py  setup.py
DORAnet_agent/: __init__.py  async_expansion_mcts.py  cli.py  mcts.py  node.py  parallel_mcts.py  visualize.py
DORAnet_agent/policies/: __init__.py  base.py  gnn_pks_scorer.py  reward.py  rollout.py  terminal_detection.py  thermodynamic.py  utils.py
PKS_agent/: node.py
RL_agents_for_retrosynthesis_notes/: Overall goals.md
RL_agents_for_retrosynthesis_notes/.obsidian/: workspace.json
RetroTide_agent/: __init__.py  cli.py  mcts.py  node.py
RetroTide_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
archives/: 00_prototype_generating_molecules.py  02_generate_unbound_PKS_products.py  04_generate_DORAnet_chem_products.py  07_featurize_PKS_and_non_PKS_products_with_ecfp4_with_downsampling.py  08_train_baseline_XGBoost_molecular_classifier_model.py  AUTO_OPEN_VISUALIZATION.md  CHEMISTRY_HELPERS_GUIDE.md  DORANET_HELPERS_INTEGRATION.md  ENHANCED_INTERACTIVE_VIZ_SUMMARY.md  INTERACTIVE_VISUALIZATION_GUIDE.md  ITERATION_VISUALIZATION_GUIDE.md  MOLECULE_NAMING_GUIDE.md  VISUALIZATION_FLAG_CHANGES.md  example_enhanced_interactive_viz.py  with_vis_mcts_eg_select_and_expand.py
archives/PKS_agent/: mcts.py  node.py  rewards.py
archives/archived_results/: doranet_results_CCCCC(=O)O_20251225_201249.txt  doranet_results_CCCCC(=O)O_20251225_211746.txt  doranet_results_CCCCC(=O)O_20251225_213435.txt  doranet_results_CCCCC(=O)O_20251225_213831.txt  (+10 more)
notebooks/: 00_EDA_on_synthetically_generated_products.ipynb  01_EDA_on_mapped_reactions.ipynb  MCS_downselection_experiment.ipynb  SA_score_distribution_analysis.ipynb  analyze_all_benchmarks.ipynb  analyze_pathway_results.ipynb  analyze_single_benchmark.ipynb  bag_of_graphs.ipynb  doranet.ipynb  extract_Retro*190_dataset.ipynb  extract_Syntheseus_PA_routes_benchmark.ipynb  mcts_step_by_step_walkthrough.ipynb  reaction_template_visualization.ipynb  sequential_vs_async_runtime_comparison.ipynb  thermodynamic_sigmoid_visualization.ipynb  tutorial_MCTS_agents.ipynb  visualize_RetroTide_MCTS_tree.ipynb
results/: doranet_interactive_example.txt  doranet_results_CCCCCCCCC(=O)O_20251227_190150.txt  doranet_results_CCCCCCCCC(=O)O_20251227_191323.txt  doranet_results_OCCCC(=O)O_20251225_005612.txt  doranet_results_OCCCC(=O)O_20251225_010527.txt  doranet_results_OCCCC(=O)O_20251225_010828.txt  doranet_results_OCCCC(=O)O_20251225_194707.txt  doranet_results_OCCCCO_20251225_200852.txt
scripts/: 01_generate_LM_and_Mod1_products.py  01_generate_PKS_products.py  01_generate_bound_PKS_products.py  02_generate_unbound_PKS_products.py  03_generate_DORAnet_bio_products.py  03_generate_DORAnet_products.py  04_generate_DORAnet_chem_products.py  05_combine_PKS_and_non_PKS_products.py  06_split_PKS_and_non_PKS_products_into_train_test_val.py  07_combined_mapped_rxns.py  07_featurize_PKS_and_non_PKS_products_with_ecfp4.py  07_featurize_PKS_and_non_PKS_products_with_ecfp4_with_downsampling.py  08_extract_substrates_from_bio_and_chem_mapped_rxns.py  08_train_baseline_XGBoost_molecular_classifier_model.py  09_split_mapped_rxns_into_train_test_val.py  10_encode_labels_for_reactant_template_pairs.py  11_featurize_reactants_from_reactant_template_pairs.py  12_encode_labels_for_reactant_template_pairs.py  12_encode_labels_for_reactant_template_pairs_and_save_mappings.py  13_split_reactant_template_pairs_into_train_test_val.py  14_featurize_reactants_with_ecfp4_from_reactant_template_pairs.py  15_train_baseline_XGBoost_template_prioritizer_model.py  15_train_baseline_template_prioritizer_model.py  CLEANUP_PGNET_README.md  benchmark.py  benchmark_DORAnetMCTS_variants.py  benchmark_runtimes.py  cleanup_pgnet_files.py  clear_cache.py  coupling_experiment.py  debug_node_values.py  example_iteration_viz.py  example_visualization_flag.py  extract_doranet_reactions.py  generate_mcts_figure.py  mcts_eg_select_and_expand.py  run_DORAnet_Async.py  run_DORAnet_Async_batch.py  run_DORAnet_single_agent.py  run_RetroTide_multiple_agents.py  (+7 more)
tests/: test_async_expansion_mcts.py  test_bfs.py  test_categorize_pathway.py  test_evaluation_smiles.py  test_feasibility_scoring.py  test_gnn_pks_scorer.py  test_mcts.py  test_node.py  test_parallel_mcts.py  test_policies.py  test_policies_integration.py  test_run_doranet_async.py  test_rxn_mapping_data.py  test_synthetic_PKS_data.py  test_template_classifier_train_test_val_sets.py  test_terminal_detection.py  test_thermodynamic_policy.py  test_thermodynamic_scoring.py  test_train_test_val_sets.py  test_utils.py  test_visualize.py
utils/: __init__.py  utils.py
(+34 files in other folders)
